Tweak bottom position of background wave to fix spacing issue.

--- a/assets/styles/component-styles/smarter-products/spr-hero.scss
+++ b/assets/styles/component-styles/smarter-products/spr-hero.scss
@@ -122,7 +122,7 @@
 .zuc-spr-hero-bkg-wave {
   background-image: url('../../assets/images/shapes/wave-top.svg');
   z-index: 2;
-  bottom: -1px;
+  bottom: -2px;
   background-position: bottom;
   height: 100%;
   width: 100%;
